--- a/_layouts/home_custom.html
+++ b/_layouts/home_custom.html
@@ -14,6 +14,12 @@
 
     <!-- Content -->
 
+    <div class="div_wallpaper">
+      <img class="img_wallpaper" src="{{site.feature_img}}">
+      <span class="text_wallpaper_main">Human & Machine Learning Lab</span>
+      <span class="text_wallpaper_sub">New York University</span>
+    </div>
+
     <div class="container mt-5">
       {{ content }}
     </div>
