edit home layout

--- a/_layouts/home_custom.html
+++ b/_layouts/home_custom.html
@@ -16,8 +16,8 @@
 
     <div class="div_wallpaper">
       <img class="img_wallpaper" src="{{site.feature_img}}">
-      <span class="text_wallpaper_main">Human & Machine Learning Lab</span>
-      <span class="text_wallpaper_sub">New York University</span>
+      <span class="text_wallpaper_main">Personal Website</span>
+      <span class="text_wallpaper_sub">Sub-heading</span>
     </div>
 
     <div class="container mt-5">
