--- a/_layouts/home_custom.html
+++ b/_layouts/home_custom.html
@@ -15,9 +15,9 @@
     <!-- Content -->
 
     <div class="div_wallpaper">
-      <img class="img_wallpaper" src="{{site.feature_img}}">
-      <span class="text_wallpaper_main">Personal Website</span>
-      <span class="text_wallpaper_sub">Sub-heading</span>
+      <!-- <img class="img_wallpaper" src="{{site.feature_img}}"> -->
+      <!-- <span class="text_wallpaper_main">Personal Website</span> -->
+      <span class="text_wallpaper_sub">Joseph Outa</span>
     </div>
 
     <div class="container mt-5">
