--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -46,7 +46,9 @@
   position: absolute;
   top: 55%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  // transform: translate(-50%, -50%);
+  transform: translate(-80%, -60%);
+
 }
 
 // Typography
