--- a/_layouts/home_custom.html
+++ b/_layouts/home_custom.html
@@ -16,7 +16,7 @@
 
     <div class="div_wallpaper">
       <!-- <img class="img_wallpaper" src="{{site.feature_img}}"> -->
-      <!-- <span class="text_wallpaper_main">Personal Website</span> -->
+      <!-- <span class="text_wallpaper_main">Joseph Outa</span> -->
       <span class="text_wallpaper_sub">Joseph Outa</span>
     </div>
 
