--- a/_layouts/home_custom.html
+++ b/_layouts/home_custom.html
@@ -20,8 +20,8 @@
       <span class="text_wallpaper_sub">Joseph Outa</span>
     </div>
 
-    <!-- <div class="container mt-5">
-      {{ content }} -->
+    <div class="container mt-5">
+      {{ content }}
     </div>
 
   </body>
