--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -46,9 +46,9 @@
   font-family: Merriweather;
   font-size: 2vw;
   position: absolute;
-  text-align: left;
-  // top: 55%;
-  // left: 50%;
+  // text-align: left;
+  top: 55%;
+  left: 50%;
   // transform: translate(-50%, -50%);
 
 }
