edit text position

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,7 +23,7 @@
   width: 100%;
   position: relative;
   // position: absolute;
-  text-align: left;
+  // text-align: left;
 }
 
 .img_wallpaper {
