manually edit header position

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -53,6 +53,16 @@
 
 }
 
+.div_wallpaper_two {
+  position: relative;
+}
+
+.topleft {
+  position: absolute;
+  top: 30%;
+  left: 30%;
+}
+
 // Typography
 
 p, h1, h2, h3, h4, h5, h6, em, div, span, strong {
