--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -164,6 +164,15 @@ a, table.table a {
   background-color: var(--global-bg-color);
   opacity: 0.95;
 }
+
+.fixed-top {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: auto;
+}
+
 .navbar.navbar-light {
   a {
     &:hover {
