--- a/_layouts/home_custom.html
+++ b/_layouts/home_custom.html
@@ -14,15 +14,15 @@
 
     <!-- Content -->
 
-    <!-- <div class="div_wallpaper"> -->
+    <div class="div_wallpaper">
       <!-- <img class="img_wallpaper" src="{{site.feature_img}}"> -->
       <!-- <span class="text_wallpaper_main">Joseph Outa</span> -->
-      <!-- <span class="text_wallpaper_sub">Joseph Outa</span>
-    </div> -->
-
+      <span class="text_wallpaper_sub">Joseph Outa</span>
+    </div>
+<!-- 
     <div class="div_second_header">
       <div class="topleft">Joseph Outa</div>
-    </div>
+    </div> -->
 
     <div class="container mt-5">
       {{ content }}
