--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,6 +11,7 @@
  body.fixed-top-nav {
    // Add some padding for the nav-bar.
    padding-top: 56px;
+   z-index: auto;
  }
 
  body.sticky-bottom-footer {
