--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
       </a>
       {% endif %} -->
       <!-- Navbar Toggle -->
+      <span class="text_wallpaper_sub">Joseph Outa</span>
       <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar top-bar"></span>
