--- a/_layouts/home_custom.html
+++ b/_layouts/home_custom.html
@@ -17,7 +17,7 @@
     <div class="div_wallpaper">
       <!-- <img class="img_wallpaper" src="{{site.feature_img}}"> -->
       <!-- <span class="text_wallpaper_main">Joseph Outa</span> -->
-      <span class="text_wallpaper_sub">Joseph Outa</span>
+      <!-- <span class="text_wallpaper_sub">Joseph Outa</span> -->
     </div>
 <!-- 
     <div class="div_second_header">
