--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -43,12 +43,12 @@
 
 .text_wallpaper_sub {
   font-weight: bold;
-  font-family: Merriweather;
-  font-size: 2vw;
+  font-family: palatino, sans-serif;
+  font-size: 1.5vw;
   position: absolute;
   // text-align: left;
-  top: 5%;
-  left: 15%;
+  top: 30%;
+  left: 26%;
   // top: 30%;
   // left: 30%;
   // transform: translate(-50%, -50%);
